# lidar-sources-de

./: .gitignore  .mypy.ini  .ruff.toml  LICENSE  README.md  pyproject.toml
dev_scripts/: dev_commands.py
docs/: bavaria_gemeinde.kml  output_bavaria_kml_regions.json
src/lidar_sources_de/: local.py  module_dataclasses.py  module_utils.py  portal_bavaria.py
src/lidar_sources_de/bavaria/: client.py  kml_parser.py  meta4_parser.py  models.py  serializers.py
